Fixing the grid by throwing it out! Fixed some other spacing issues

--- a/docroot/themes/custom/ucsf_edu/components/_patterns/00-base/layouts/grid/_grid.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/00-base/layouts/grid/_grid.scss
@@ -33,6 +33,15 @@
   }
 }
 
+@mixin grid-fifteen {
+  @include grid-base;
+
+  @include medium {
+    grid-template-columns: repeat(15, 1fr);
+    grid-gap: 0;
+  }
+}
+
 .grid {
   @include grid;
 }
