--- a/docroot/themes/custom/ucsf_edu/components/_patterns/02-molecules/menus/share/_share.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/02-molecules/menus/share/_share.scss
@@ -5,7 +5,7 @@
   font-size: 24px;
   float: left;
   width: 0;
-  margin-left: -20%;
+  margin-left: -16%;
 
   li {
     margin-bottom: 5px;
