--- a/docroot/themes/custom/ucsf_edu/components/_patterns/02-molecules/menus/tags/_tags.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/02-molecules/menus/tags/_tags.scss
@@ -38,7 +38,6 @@
     a {
       color: $blue;
       text-decoration: none;
-      font-weight: 700;
     }
   }
 }
