--- a/docroot/themes/custom/ucsf_edu/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -11,8 +11,8 @@
 }
 
 .logo {
-  width: $space-eleven;
-  height: 41px;
+  width: 83px;
+  height: 40px;
   margin-bottom: $space-three;
   grid-column: 1 / span 2;
 }
