--- a/docroot/themes/custom/ucsf_edu/components/_patterns/04-templates/_article.scss
+++ b/docroot/themes/custom/ucsf_edu/components/_patterns/04-templates/_article.scss
@@ -2,9 +2,7 @@
   background: $background-gray;
 
   .main-content {
-    @include grid;
-
-    grid-gap: 0;
+    @include grid-fifteen;
   }
 }
 
@@ -17,7 +15,7 @@
   grid-column: 3 / -3;
 
   &.article-medium {
-    margin-top: -40%;
+    margin-top: -32%;
   }
 
   &.article-feature {
@@ -27,7 +25,7 @@
 }
 
 .article-feature-banner {
-  @include grid;
+  @include grid-fifteen;
 
   grid-template-rows: repeat(2, auto);
   grid-gap: 0;
@@ -36,7 +34,7 @@
     background-color: rgba(255, 255, 255, 0.8);
     grid-column: 2 / -1;
     grid-row: 2 / -1;
-    padding: 56px 56px 0 120px;
+    padding: 56px 56px 0 96px;
 
     h1 {
       font-size: 82px;
